For the upcoming Release: - Brought the release for 0.8.x to version 0.4.9.4 - Added Icons in the compendium for all morph- and ego traits - Fixed an interface bug which rendered the search within compendiums unreadable
0.8.1 ToDoList:
- Still using functions to be deprecated in 9.x (medium)

--- a/css/eclipsephase.css
+++ b/css/eclipsephase.css
@@ -1098,3 +1098,7 @@ h3.inline {
   padding: 3em 2em 2em 3.5em;
   clip-path: polygon(71% 0, 73% 5%, 97% 5%, 100% 10%, 100% 100%, 3% 100%, 0 96%, 0 0, 26% 0);
 }
+
+.directory .directory-header .header-search input {
+  background: none;
+}
